[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ProfilItem.gd" type="Script" id=1]

[node name="ProfilItemControl" type="CenterContainer"]
margin_right = 229.0
margin_bottom = 40.0
rect_min_size = Vector2( 220, 40 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_top = 10.0
margin_right = 229.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterGrid" type="GridContainer" parent="VBoxContainer"]
margin_right = 229.0
margin_bottom = 20.0
columns = 5

[node name="PlayWithProfileButton" type="Button" parent="VBoxContainer/CenterGrid"]
margin_right = 38.0
margin_bottom = 20.0
mouse_filter = 1
text = "Play"
icon_align = 1

[node name="ProfileNameLabel" type="Label" parent="VBoxContainer/CenterGrid"]
margin_left = 42.0
margin_right = 117.0
margin_bottom = 20.0
hint_tooltip = "name"
mouse_filter = 1
size_flags_vertical = 1
text = "profil_name"
align = 1
valign = 1

[node name="ProfileLevelLable" type="Label" parent="VBoxContainer/CenterGrid"]
margin_left = 121.0
margin_right = 129.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 14 )
hint_tooltip = "level"
mouse_filter = 1
size_flags_vertical = 1
text = "0"
align = 1
valign = 1

[node name="ProfileAmountOfXPToNextLevelLable" type="Label" parent="VBoxContainer/CenterGrid"]
margin_left = 133.0
margin_right = 170.0
margin_bottom = 20.0
hint_tooltip = "current_amount_of_experience/experience_to_next_level"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0/100"
align = 1
valign = 1

[node name="DeleteProfileButton" type="Button" parent="VBoxContainer/CenterGrid"]
margin_left = 174.0
margin_right = 229.0
margin_bottom = 20.0
mouse_filter = 1
text = "Delete"
icon_align = 1

[connection signal="pressed" from="VBoxContainer/CenterGrid/PlayWithProfileButton" to="." method="_on_PlayWithProfileButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterGrid/DeleteProfileButton" to="." method="_on_DeleteProfileButton_pressed"]
